--- a/StasIvanExKitchen.csproj
+++ b/StasIvanExKitchen.csproj
@@ -110,10 +110,24 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\ProductsKitchen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Registration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\Autorisation.xaml.cs">
       <DependentUpon>Autorisation.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ProductsKitchen.xaml.cs">
+      <DependentUpon>ProductsKitchen.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Registration.xaml.cs">
+      <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
